<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">抖音短视频</string>
    <string name="title_home">首页</string>
    <string name="title_recommend">推荐</string>
    <string name="title_collect">好友</string>
    <string name="title_msg">消息</string>
    <string name="title_personal">个人</string>

    <!-- 点赞选中 -->
    <string name="icon_like_fill">&#xe60d;</string>
    <!--评论-->
    <string name="icon_comment">&#xe621;</string>
    <!-- 微博 -->
    <string name="icon_weibo">&#xe620;</string>
    <!-- 微信 -->
    <string name="icon_wechat">&#xe61d;</string>
    <!-- 微信朋友圈 -->
    <string name="icon_friends">&#xe61c;</string>
    <!-- QQ -->
    <string name="icon_qq">&#xe61e;</string>
    <!-- QQ空间 -->
    <string name="icon_qq_space">&#xe61f;</string>
    <!-- 更多 -->
    <string name="icon_more">&#xe61b;</string>
    <!-- 地理位置 -->
    <string name="icon_location_fill">&#xe624;</string>

    <string name="trans">trans</string>

    <string name="view_pager_bottom_sheet_behavior" translatable="false" tools:ignore="ExtraTranslation">
        com.goobird.common.application.widget.bottomsheetdialog.viewpagerofbottomsheet.ViewPagerBottomSheetBehavior</string>


</resources>
