<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recommend"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_recommend" />

    <item
        android:id="@+id/navigation_collect"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_collect" />

    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/ic_collect_black_24dp"
        android:title="@string/title_msg" />

    <item
        android:id="@+id/navigation_personal"
        android:icon="@drawable/ic_personal_black_24dp"
        android:title="@string/title_personal" />

</menu>
